--- a/src/pages/fr/api/htmx-partials/github-stars.astro
+++ b/src/pages/fr/api/htmx-partials/github-stars.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import { Icon } from "astro-iconify";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 // https://docs.astro.build/en/basics/astro-pages/#page-partials
 const repo = await fetch("https://api.github.com/repos/cameronapak/freedom-stack", {
