--- a/src/pages/fr/api/htmx-partials/rick-roll.astro
+++ b/src/pages/fr/api/htmx-partials/rick-roll.astro
@@ -1,7 +1,7 @@
 ---
 import { changeLanguage } from "i18next";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 // https://docs.astro.build/en/basics/astro-pages/#page-partials
 export const partial = true;
