--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -14,7 +14,7 @@ import deployToNetlifyImage from "@/assets/deploy.png";
 import fullStackImage from "@/assets/full-stack.png";
 import i18next, { t, changeLanguage } from "i18next";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 const features = [
     { title: "Astro", description: "The simplest web metaframework" },
