--- a/src/pages/fr/posts/[...slug].astro
+++ b/src/pages/fr/posts/[...slug].astro
@@ -10,7 +10,7 @@ import Navbar from "@sections/Navbar.astro";
 import Container from "@sections/Container.astro";
 import RenderMarkdown from "@/components/RenderMarkdown.astro";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 const { slug } = Astro.params;
 const user = await Astro.locals.currentUser();
