--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -48,13 +48,14 @@ const {
         <div>
           <h3 class="footer-title m-0 font-normal text-slate-800 opacity-100">{section.title}</h3>
           <ul class="space-y-2">
-            {section.items.map((link) => (
-              <li>
-                <a href={link.href} class="hover:underline hover:text-primary transition-colors">
-                  {link.text}
-                </a>
-              </li>
-            ))}
+            {Array.isArray(section.items) &&
+              section.items.map((link) => (
+                <li>
+                  <a href={link.href} class="hover:underline hover:text-primary transition-colors">
+                    {link.text}
+                  </a>
+                </li>
+              ))}
           </ul>
         </div>
       ))
