--- a/src/pages/fr/dashboard/posts/new.astro
+++ b/src/pages/fr/dashboard/posts/new.astro
@@ -3,7 +3,7 @@ import { changeLanguage } from "i18next";
 import Layout from "@/layouts/Layout.astro";
 import { actions } from "astro:actions";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 if (!Astro.locals.auth().userId) {
     return Astro.redirect("/");
