--- a/src/pages/fr/posts/index.astro
+++ b/src/pages/fr/posts/index.astro
@@ -6,7 +6,7 @@ import Navbar from "@sections/Navbar.astro";
 import Container from "@sections/Container.astro";
 import Footer from "@sections/Footer.astro";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 const pageTitle = "Posts";
 const allPosts = await db.select().from(Posts).orderBy(desc(Posts.pubDate));
