--- a/src/pages/fr/sign-in.astro
+++ b/src/pages/fr/sign-in.astro
@@ -5,7 +5,7 @@ import Layout from "@/layouts/Layout.astro";
 import Container from "@sections/Container.astro";
 import Navbar from "@sections/Navbar.astro";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 if (Astro.locals.auth().userId) {
     return Astro.redirect("/dashboard");
